# old.website

./: .build.yml  .gitignore  .markdownlint.json  .vangaurd.toml  Caddyfile  Makefile  README.md  test  test.dwarf  todo.md
.github/workflows/: main.yml
.obsidian/: workspace
design/: art.md  core.md  ideas.md  technical.md
design/.obsidian/: workspace
design/art/: background.md  theme.md
docs/: AI.html  CNAME  feed.rss  goblins.html  hedonism.html  ideology.html  index.html  strangeloop2023.html  test.html  time.html  web3.html  zombieProgrammers.html
docs/rndm/: dithering.html  stickers.html
docs/static/: highlight.min.js  oneko.js  stylesheet.css  yc.js
site/: README.md  config.yml
site/content/: goblins.md  hedonism.md  ideology.md  index.md  strangeloop.md  test.md  web3.md  zombieProgrammers.md  zombieProgrammers.md.bak
site/content/builtin/: AI.md
site/content/rndm/: dithering.md  stickers.md
site/theme/: index.html  index.html.j2
site/theme/static/: highlight.min.js  yc.js  (+1 more)
software/: README.md  shard.yml
software/carina/: Makefile  carina  carina_completions.fish
software/cygnusloop/: .envrc  .gitignore  README.md  pyproject.toml
software/cygnusloop/src/: __init__.py  comments.py  db.py  new.py  view.py
software/cygnusloop/src/web/static/: style.css
software/cygnusloop/src/web/templates/: new.html  submited.html  view_comment.html
software/helix/: .vangaurd.toml  Makefile  README.md  shard.yml
software/starport/: README.md
www/: index.html  test.html  zombieProgrammers.html
www/static/: default.min.css  stylesheet.css
(+9 files in other folders)
