[tool.poetry]
name = "cygnusloop"
version = "0.1.0"
description = "a comment system for nebula"
authors = ["arcade <l3gacy.b3ta@disroot.org>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
click = "^8.0.4"
timeago = "^1.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
